Updated some pages

--- a/about.html
+++ b/about.html
@@ -17,7 +17,33 @@
   <!-- Reusable header -->
   <div id="header-include"></div>
 
-<h1>About page</h1>
+  <main class="sp-container" style="max-width: 800px; margin: 0 auto;">
+    <h1 style="font-family: 'Noto Serif Kannada', serif; color: var(--sp-brown-800); margin-bottom: 18px;">About the Journal</h1>
+    
+    <section style="margin-top: 1.5em;">
+      <h2 style="color: var(--sp-brown-600);">Our Mission</h2>
+      <p>
+        The journal is dedicated to providing a platform for publishing high-quality research in the field of Kannada studies, literature, and culture. We aim to foster intellectual exchange and bring forward innovative ideas and critical discussions.
+      </p>
+    </section>
+
+    <section style="margin-top: 1.5em;">
+      <h2 style="color: var(--sp-brown-600);">Editorial Board Overview</h2>
+      <p>
+        Our editorial board consists of esteemed scholars and experts in Kannada studies, committed to maintaining the quality and integrity of published work. For more information about our editorial board members, please visit the <a href="editorial-board.html" style="color: var(--sp-red-700); font-weight: 700;">Editorial Board</a> page.
+      </p>
+    </section>
+
+    <section style="margin-top: 1.5em;">
+      <h2 style="color: var(--sp-brown-600);">Contact Information</h2>
+      <p>
+        For any inquiries, please reach out to us at:<br><br>
+        <strong>Email:</strong> <a href="mailto:info@journalofkannada.com" style="color: var(--sp-red-700); font-weight: 700;">info@journalofkannada.com</a><br>
+        <strong>Phone:</strong> +91 123 456 7890<br>
+        <strong>Address:</strong> 123 Kannada Journal Road, Bengaluru, India
+      </p>
+    </section>
+  </main>
 
   <!-- Reusable footer -->
   <div id="footer-include"></div>
@@ -33,6 +59,4 @@
   </script>
 
   <!-- i18n (loads strings from /lang/lang.json and swaps by data-i18n) -->
-  <script src="/js/lang.js"></script>
-</body>
-</html>
+  <script src=
