--- a/guidelines.html
+++ b/guidelines.html
@@ -17,7 +17,50 @@
   <!-- Reusable header -->
   <div id="header-include"></div>
 
-  <h1>Guidelines page</h1>
+  <main class="sp-container" style="max-width: 800px; margin: 0 auto;">
+    <h1 style="font-family: 'Noto Serif Kannada', serif; color: var(--sp-brown-800); margin-bottom: 18px;">Submission Guidelines</h1>
+    <h2 style="color: var(--sp-brown-600); margin-top: 1.5em;">Guidelines for authors submitting articles to the Journal of Kannada Studies</h2>
+
+    <section style="margin-top: 1.5em;">
+      <h3 style="color: var(--sp-red-700);">General Requirements</h3>
+      <p>
+        We welcome original research articles, reviews, and critical essays related to Kannada language, literature, and culture. Please ensure your work adheres to the following guidelines before submitting.
+      </p>
+    </section>
+
+    <section style="margin-top: 1.5em;">
+      <h3 style="color: var(--sp-red-700);">Formatting Requirements</h3>
+      <ul style="margin-left: 1.2em;">
+        <li>Manuscripts should be submitted in Word format (.doc or .docx).</li>
+        <li>Font: Times New Roman, 12pt size, double-spaced.</li>
+        <li>Title page must include the title, author’s name, and affiliation.</li>
+        <li>Include an abstract of up to 250 words at the beginning of the manuscript.</li>
+        <li>Use footnotes for citations and references in MLA style.</li>
+      </ul>
+    </section>
+
+    <section style="margin-top: 1.5em;">
+      <h3 style="color: var(--sp-red-700);">Peer Review Process</h3>
+      <p>
+        All submissions are subject to a double-blind peer review process. Our editorial team will review your submission, and if it meets our guidelines, it will be forwarded to reviewers. The review process typically takes 4-6 weeks.
+      </p>
+    </section>
+
+    <section style="margin-top: 1.5em;">
+      <h3 style="color: var(--sp-red-700);">Publication Ethics</h3>
+      <p>
+        We adhere to strict ethical guidelines. Authors must ensure that their submissions are original and have not been published or submitted elsewhere. Any conflicts of interest must be disclosed.
+      </p>
+    </section>
+
+    <section style="margin-top: 1.5em;">
+      <h3 style="color: var(--sp-red-700);">How to Submit</h3>
+      <p>
+        Submit your manuscript as an email attachment to <a href="mailto:submissions@journalofkannada.com" style="color: var(--sp-red-700); font-weight: 700;">submissions@journalofkannada.com</a>.<br>
+        For questions about the submission process, please contact us at the same email address.
+      </p>
+    </section>
+  </main>
 
   <!-- Reusable footer -->
   <div id="footer-include"></div>
