--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,21 @@
   <!-- Reusable header -->
   <div id="header-include"></div>
 
-<h1>Contact page</h1>
+  <main class="sp-container" style="max-width: 700px; margin: 0 auto;">
+    <h1 style="font-family: 'Noto Serif Kannada', serif; color: var(--sp-brown-800); margin-bottom: 18px;">Contact Us</h1>
+    <section style="margin-top: 1.5em;">
+      <h2 style="color: var(--sp-brown-600);">Contact Information</h2>
+      <p>
+        We’d love to hear from you! Reach out to us via the following:
+      </p>
+      <p>
+        <strong>Email:</strong> <a href="mailto:info@journalofkannada.com" style="color: var(--sp-red-700); font-weight: 700;">info@journalofkannada.com</a><br>
+        <strong>Phone:</strong> +91 123 456 7890<br>
+        <strong>Address:</strong> 123 Kannada Journal Road, Bengaluru, India
+      </p>
+    </section>
+  </main>
+
   <!-- Reusable footer -->
   <div id="footer-include"></div>
 
@@ -32,6 +46,4 @@
   </script>
 
   <!-- i18n (loads strings from /lang/lang.json and swaps by data-i18n) -->
-  <script src="/js/lang.js"></script>
-</body>
-</html>
+  <script src=
