--- a/guidelines.html
+++ b/guidelines.html
@@ -3,62 +3,130 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Sahithya Prasthana | Multi-Disciplinary Bi-Monthly Journal</title>
+  <title data-i18n="sg_title">ಸಲ್ಲಿಕೆ ಮಾರ್ಗಸೂಚಿ | Sahithya Prasthana</title>
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Kannada:wght@600;700&family=Marcellus&display=swap" rel="stylesheet">
 
-  <!-- Page-scoped styles (no overlap) -->
+  <!-- Theme files -->
   <link rel="stylesheet" href="/css/base.css">
   <link rel="stylesheet" href="/css/header.css">
-  <link rel="stylesheet" href="/css/home.css">
+  <link rel="stylesheet" href="/css/guidelines.css">
 </head>
 <body>
   <!-- Reusable header -->
   <div id="header-include"></div>
 
-  <main class="sp-container" style="max-width: 800px; margin: 0 auto;">
-    <h1 style="font-family: 'Noto Serif Kannada', serif; color: var(--sp-brown-800); margin-bottom: 18px;">Submission Guidelines</h1>
-    <h2 style="color: var(--sp-brown-600); margin-top: 1.5em;">Guidelines for authors submitting articles to the Journal of Kannada Studies</h2>
-
-    <section style="margin-top: 1.5em;">
-      <h3 style="color: var(--sp-red-700);">General Requirements</h3>
-      <p>
-        We welcome original research articles, reviews, and critical essays related to Kannada language, literature, and culture. Please ensure your work adheres to the following guidelines before submitting.
+  <main class="sp-container sg">
+    <!-- HERO -->
+    <header class="sg-hero">
+      <h1 class="sg-title" data-i18n="sg_heading">ಸಲ್ಲಿಕೆ ಮಾರ್ಗಸೂಚಿಗಳು</h1>
+      <p class="sg-subtitle" data-i18n="sg_subtitle">
+        ಕನ್ನಡ ಅಧ್ಯಯನಗಳ ಕುರಿತ ನಿಮ್ಮ ಮೂಲ ಸಂಶೋಧನೆ/ಲೇಖನಗಳನ್ನು ಪ್ರಕಟಿಸಲು ಮಾರ್ಗಸೂಚಿಗಳು.
       </p>
-    </section>
 
-    <section style="margin-top: 1.5em;">
-      <h3 style="color: var(--sp-red-700);">Formatting Requirements</h3>
-      <ul style="margin-left: 1.2em;">
-        <li>Manuscripts should be submitted in Word format (.doc or .docx).</li>
-        <li>Font: Times New Roman, 12pt size, double-spaced.</li>
-        <li>Title page must include the title, author’s name, and affiliation.</li>
-        <li>Include an abstract of up to 250 words at the beginning of the manuscript.</li>
-        <li>Use footnotes for citations and references in MLA style.</li>
+      <div class="sg-chips">
+        <span class="chip"><span class="dot"></span><span data-i18n="sg_chip_freq">ದ್ವೈಮಾಸಿಕ</span></span>
+        <span class="chip"><span class="dot"></span><span data-i18n="sg_chip_scope">ಬಹುಶಿಸ್ತೀಯ ಕಣಜ</span></span>
+        <span class="chip"><span class="dot"></span><span data-i18n="sg_chip_review">ಡಬಲ್-ಬ್ಲೈಂಡ್ ಪಿಯರ್-ರಿವ್ಯೂ</span></span>
+      </div>
+
+      <div class="sg-cta">
+        <a href="mailto:submissions@journalofkannada.com" class="sp-btn" data-i18n="sg_btn_submit">ಇಮೇಲ್ ಮೂಲಕ ಸಲ್ಲಿಸಿ</a>
+        <a href="/archive.html" class="sp-btn ghost" data-i18n="sg_btn_archive">ಆರ್ಕೈವ್ ವೀಕ್ಷಿಸಿ</a>
+      </div>
+    </header>
+
+    <!-- SECTIONS -->
+    <section class="sg-card">
+      <h2 data-i18n="sg_sec_general">ಸಾಮಾನ್ಯ ನಿಯಮಗಳು</h2>
+      <p data-i18n="sg_general_p1">
+        ಕನ್ನಡ ಭಾಷೆ, ಸಾಹಿತ್ಯ, ಸಂಸ್ಕೃತಿ ಮತ್ತು ಸಂಬಂಧಿತ ಕ್ಷೇತ್ರಗಳಿಗೆ ಸಂಬಂಧಿಸಿದ ಮೂಲ ಸಂಶೋಧನೆ, ವಿಮರ್ಶಾ ಲೇಖನಗಳು ಹಾಗೂ ವಿದ್ವತ್ ಲೇಖನಗಳನ್ನು ನಾವು ಸ್ವಾಗತಿಸುತ್ತೇವೆ. ಲೇಖನ ಮೂಲತವಾಗಿರಬೇಕು ಹಾಗೂ ಯಾವುದಾದರೂ ಪತ್ರಿಕೆ/ಸಮ್ಮೇಳನದಲ್ಲಿ ಪ್ರಕಟಿಸದೇ ಇರಬೇಕು.
+      </p>
+      <ul class="sg-list">
+        <li data-i18n="sg_general_li1">ಮೂಲಕೃತಿಗೆ ಮಾತ್ರ ಅವಕಾಶ; ಪ್ಲೇಗಿಯರಿಸಂ ಶೇಕಡಾ 10 ಕ್ಕಿಂತ ಕಡಿಮೆ ಇರಬೇಕು.</li>
+        <li data-i18n="sg_general_li2">ಒಂದು ಲೇಖನವನ್ನು ಒಂದೇ ಪತ್ರಿಕೆಗೆ ಮಾತ್ರ ಸಲ್ಲಿಸಿ (ಸಮಾಂತರ ಸಲ್ಲಿಕೆ ಬೇಡ).</li>
+        <li data-i18n="sg_general_li3">ಸಹಲೇಖಕರಿದ್ದರೆ ಎಲ್ಲರ ಅನುಮತಿ ಬೇಕು.</li>
       </ul>
     </section>
 
-    <section style="margin-top: 1.5em;">
-      <h3 style="color: var(--sp-red-700);">Peer Review Process</h3>
-      <p>
-        All submissions are subject to a double-blind peer review process. Our editorial team will review your submission, and if it meets our guidelines, it will be forwarded to reviewers. The review process typically takes 4-6 weeks.
-      </p>
+    <section class="sg-card">
+      <h2 data-i18n="sg_sec_format">ಫಾರ್ಮ್ಯಾಟಿಂಗ್</h2>
+      <div class="sg-grid">
+        <div>
+          <h3 data-i18n="sg_format_doc">ದಾಖಲೆ ಸ್ವರೂಪ</h3>
+          <ul class="sg-list tight">
+            <li data-i18n="sg_format_li1">.doc / .docx (Word) ರೂಪದಲ್ಲಿ ಸಲ್ಲಿಸಿ.</li>
+            <li data-i18n="sg_format_li2">ಫಾಂಟ್: Times New Roman (EN) / Tunga/Baraha (KN) – 12pt, ಡಬಲ್-ಸ್ಪೇಸ್.</li>
+            <li data-i18n="sg_format_li3">ಶೀರ್ಷಿಕೆ ಪುಟದಲ್ಲಿ ಶೀರ್ಷಿಕೆ, ಲೇಖಕರ ಹೆಸರು, ಸಂಸ್ಥೆ, ಇಮೇಲ್.</li>
+            <li data-i18n="sg_format_li4">250 ಪದಗಳ ಸಾರಾಂಶ (Abstract) ಮತ್ತು 4–6 ಕೀವರ್ಡ್ಸ್.</li>
+          </ul>
+        </div>
+        <div>
+          <h3 data-i18n="sg_format_style">ಉಲ್ಲೇಖ ಶೈಲಿ</h3>
+          <ul class="sg-list tight">
+            <li data-i18n="sg_format_li5">MLA ಫುಟ್ನೋಟ್/ಎಂಡ್‌ನೋಟ್ ಶೈಲಿ (ತಾಜಾ ಆವೃತ್ತಿ).</li>
+            <li data-i18n="sg_format_li6">ಚಿತ್ರ/ಟೇಬಲ್‌ಗಳಿಗೆ ಶೀರ್ಷಿಕೆ ಮತ್ತು ಮೂಲ.</li>
+            <li data-i18n="sg_format_li7">ಟ್ರಾನ್ಸ್ಲಿಟರೇಷನ್ ಬಳಕೆ ಮಾಡಿದರೆ ನೀತಿ-ಪಟ್ಟಿ ಸೇರಿಸಿ.</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="sg-callout">
+        <strong data-i18n="sg_template_title">ಟೆಂಪ್ಲೇಟ್</strong>
+        <span data-i18n="sg_template_desc">ಯೂನಿಫಾರ್ಮ್ ಫಾರ್ಮ್ಯಾಟಿಂಗ್‌ಗಾಗಿ ಈ ಮಾದರಿಯನ್ನು ಬಳಸಿ.</span>
+        <div class="sg-callout-actions">
+          <a class="sp-btn" href="/assets/templates/SP_Article_Template.docx" download data-i18n="sg_btn_download_doc">Word ಟೆಂಪ್ಲೇಟ್ ಡೌನ್‌ಲೋಡ್</a>
+        </div>
+      </div>
     </section>
 
-    <section style="margin-top: 1.5em;">
-      <h3 style="color: var(--sp-red-700);">Publication Ethics</h3>
-      <p>
-        We adhere to strict ethical guidelines. Authors must ensure that their submissions are original and have not been published or submitted elsewhere. Any conflicts of interest must be disclosed.
-      </p>
+    <section class="sg-card">
+      <h2 data-i18n="sg_sec_review">ಪಿಯರ್-ರಿವ್ಯೂ ಪ್ರಕ್ರಿಯೆ</h2>
+      <ol class="sg-steps">
+        <li>
+          <span class="step" aria-hidden="true">1</span>
+          <div>
+            <strong data-i18n="sg_rev_1_t">ಪ್ರಾಥಮಿಕ ಪರಿಶೀಲನೆ (7 ದಿನ)</strong>
+            <p data-i18n="sg_rev_1_d">ಸಂಪಾದಕೀಯ ತಂಡವು ವಿಷಯ-ವ್ಯಾಪ್ತಿ, ನೈತಿಕತೆ, ಮೂಲತ್ವ ಪರಿಶೀಲನೆ ಮಾಡುತ್ತದೆ.</p>
+          </div>
+        </li>
+        <li>
+          <span class="step" aria-hidden="true">2</span>
+          <div>
+            <strong data-i18n="sg_rev_2_t">ಡಬಲ್-ಬ್ಲೈಂಡ್ ವಿಮರ್ಶೆ (4–6 ವಾರ)</strong>
+            <p data-i18n="sg_rev_2_d">ಎರಡು ಸ್ವತಂತ್ರ ವಿಮರ್ಶಕರಿಂದ ಗುಪ್ತ ವಿಮರ್ಶೆ. ಸಲಹೆಗಳಂತೆ ಪರಿಷ್ಕರಣೆ ಅವಶ್ಯಕ.</p>
+          </div>
+        </li>
+        <li>
+          <span class="step" aria-hidden="true">3</span>
+          <div>
+            <strong data-i18n="sg_rev_3_t">ಅಂತಿಮ ನಿರ್ಣಯ</strong>
+            <p data-i18n="sg_rev_3_d">ಸ್ವೀಕಾರ/ಸಣ್ಣ ಪರಿಷ್ಕರಣೆ/ಮಹತ್ತರ ಪರಿಷ್ಕರಣೆ/ನಿರಾಕರಣೆ – ಲೇಖಕರಿಗೆ ತಿಳಿಸಲಾಗುತ್ತದೆ.</p>
+          </div>
+        </li>
+      </ol>
     </section>
 
-    <section style="margin-top: 1.5em;">
-      <h3 style="color: var(--sp-red-700);">How to Submit</h3>
-      <p>
-        Submit your manuscript as an email attachment to <a href="mailto:submissions@journalofkannada.com" style="color: var(--sp-red-700); font-weight: 700;">submissions@journalofkannada.com</a>.<br>
-        For questions about the submission process, please contact us at the same email address.
+    <section class="sg-card">
+      <h2 data-i18n="sg_sec_ethics">ಪ್ರಕಟನಾ ನೈತಿಕತೆ</h2>
+      <ul class="sg-checklist">
+        <li data-i18n="sg_eth_1">ಪ್ಲೇಗಿಯರಿಸಂ, ಡೇಟಾ-ಮ್ಯಾನಿಪ್ಯುಲೇಶನ್, ಗೌಸ್ಟ್-ರೈಟಿಂಗ್ ನಿಷಿದ್ಧ.</li>
+        <li data-i18n="sg_eth_2">ಸಂಶೋಧನಾ ಅನುಮತಿ/ಮಾನವ ವಿಷಯಗಳ ಅನುಮತಿ ದಾಖಲಿಸಿ (ಅಗತ್ಯವಿದ್ದಲ್ಲಿ).</li>
+        <li data-i18n="sg_eth_3">ಸಂಭಾವ್ಯ ಹಿತಾಸಕ್ತಿ ಘೋಷಣೆ (Conflict of Interest) ಸೇರಿಸಿ.</li>
+        <li data-i18n="sg_eth_4">ಕಾಪಿರೈಟ್/ಪತ್ರಭದ್ರತೆಗೆ ಸಂಬಂಧಿಸಿದ ನೀತಿಗಳನ್ನು ಪಾಲಿಸಬೇಕು.</li>
+      </ul>
+    </section>
+
+    <section class="sg-card">
+      <h2 data-i18n="sg_sec_submit">ಹೀಗೆ ಸಲ್ಲಿಸಿ</h2>
+      <p data-i18n="sg_submit_p1">
+        ನಿಮ್ಮ ಲೇಖನವನ್ನು Word ರೂಪದಲ್ಲಿ (ಮತ್ತು PDF, ಐಚ್ಚಿಕ) ಅಟ್ಯಾಚ್ ಮಾಡಿ, ಕೆಳಗಿನ ಇಮೇಲ್ ಗೆ ಕಳುಹಿಸಿ. ವಿಷಯ (Subject): “Article Submission – SP”.
       </p>
+      <div class="sg-contact">
+        <a class="sp-btn" href="mailto:submissions@journalofkannada.com" data-i18n="sg_btn_email">submissions@journalofkannada.com</a>
+        <span class="note" data-i18n="sg_submit_note">ಪ್ರಶ್ನೆಗಳು/ಸ್ಪಷ್ಟೀಕರಣಗಳಿಗೂ ಇದೇ ಇಮೇಲ್.</span>
+      </div>
     </section>
   </main>
 
@@ -69,13 +137,12 @@
   <script src="/js/include.js"></script>
   <script src="/js/nav.js"></script>
   <script>
-    // Load header, then footer, then init nav (prevents race conditions)
     include('#header-include','/partials/header.html')
       .then(() => include('#footer-include','/partials/footer.html'))
       .then(() => { if (window.spNavInit) window.spNavInit(); });
   </script>
 
-  <!-- i18n (loads strings from /lang/lang.json and swaps by data-i18n) -->
+  <!-- i18n -->
   <script src="/js/lang.js"></script>
 </body>
 </html>
