--- a/about.html
+++ b/about.html
@@ -3,45 +3,114 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Sahithya Prasthana | Multi-Disciplinary Bi-Monthly Journal</title>
+  <title data-i18n="about_title">ನಮ್ಮ ಬಗ್ಗೆ | Sahithya Prasthana</title>
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Kannada:wght@600;700&family=Marcellus&display=swap" rel="stylesheet">
 
-  <!-- Page-scoped styles (no overlap) -->
+  <!-- Theme files -->
   <link rel="stylesheet" href="/css/base.css">
   <link rel="stylesheet" href="/css/header.css">
-  <link rel="stylesheet" href="/css/home.css">
+  <link rel="stylesheet" href="/css/about.css">
 </head>
 <body>
   <!-- Reusable header -->
   <div id="header-include"></div>
 
-  <main class="sp-container" style="max-width: 800px; margin: 0 auto;">
-    <h1 style="font-family: 'Noto Serif Kannada', serif; color: var(--sp-brown-800); margin-bottom: 18px;">About the Journal</h1>
-    
-    <section style="margin-top: 1.5em;">
-      <h2 style="color: var(--sp-brown-600);">Our Mission</h2>
-      <p>
-        The journal is dedicated to providing a platform for publishing high-quality research in the field of Kannada studies, literature, and culture. We aim to foster intellectual exchange and bring forward innovative ideas and critical discussions.
+  <main class="sp-container about">
+    <!-- HERO -->
+    <header class="about-hero">
+      <h1 class="about-title" data-i18n="about_heading">ಪತ್ರಿಕೆಯ ಪರಿಚಯ</h1>
+      <p class="about-subtitle" data-i18n="about_tagline">
+        ಕನ್ನಡ ಅಧ್ಯಯನ, ಸಾಹಿತ್ಯ ಮತ್ತು ಸಂಸ್ಕೃತಿಯ ગુણಮಟ್ಟದ ಸಂಶೋಧನೆಗಾಗಿ ಸಮರ್ಪಿತ ವೇದಿಕೆ.
       </p>
+
+      <div class="about-chips">
+        <span class="chip"><span class="dot"></span><span data-i18n="about_chip_bimonthly">ದ್ವೈಮಾಸಿಕ</span></span>
+        <span class="chip"><span class="dot"></span><span data-i18n="about_chip_scope">ಬಹುಶಿಸ್ತೀಯ</span></span>
+        <span class="chip"><span class="dot"></span><span data-i18n="about_chip_review">ಡಬಲ್-ಬ್ಲೈಂಡ್ ಪಿಯರ್-ರಿವ್ಯೂ</span></span>
+      </div>
+
+      <div class="about-cta">
+        <a class="sp-btn" href="/guidelines.html" data-i18n="about_btn_submit">ಸಲ್ಲಿಕೆ ಮಾರ್ಗಸೂಚಿ</a>
+        <a class="sp-btn ghost" href="/archive.html" data-i18n="about_btn_archive">ಆರ್ಕೈವ್ ವೀಕ್ಷಿಸಿ</a>
+      </div>
+    </header>
+
+    <!-- MISSION & SCOPE -->
+    <section class="about-card">
+      <h2 data-i18n="about_mission_h">ನಮ್ಮ ಮಿಷನ್</h2>
+      <p data-i18n="about_mission_p">
+        ಕನ್ನಡ ಅಧ್ಯಯನ, ಸಾಹಿತ್ಯ, ಮತ್ತು ಸಂಸ್ಕೃತಿ ಕ್ಷೇತ್ರಗಳಲ್ಲಿ ಗುಣಮಟ್ಟದ ಸಂಶೋಧನೆಗಳಿಗೆ ವೇದಿಕೆ ಒದಗಿಸುವುದು ನಮ್ಮ ಉದ್ದೇಶ. ವಿಮರ್ಶಾತ್ಮಕ ಚರ್ಚೆಗಳು ಹಾಗೂ ಹೊಸ ಆದರ್ಶಗಳನ್ನು ಉತ್ತೇಜಿಸುವುದು ನಮ್ಮ ಧ್ಯೇಯ.
+      </p>
+
+      <div class="about-grid">
+        <div>
+          <h3 data-i18n="about_scope_h">ವ್ಯಾಪ್ತಿ (Scope)</h3>
+          <ul class="about-list">
+            <li data-i18n="about_scope_li1">ಕನ್ನಡ ಭಾಷಾಶಾಸ್ತ್ರ, ಸಾಹಿತ್ಯ, ಜನಪದ, ಸಂಸ್ಕೃತಿ ಅಧ್ಯಯನ.</li>
+            <li data-i18n="about_scope_li2">ಅನುಸಂಧಾನದ ಅಂತರಶಿಸ್ತೀಯ ಅಧ್ಯಯನಗಳು.</li>
+            <li data-i18n="about_scope_li3">ಪುಸ್ತಕ ವಿಮರ್ಶೆ, ಸಂವಾದ, ಕ್ಷೇತ್ರ ವರದಿಗಳು.</li>
+          </ul>
+        </div>
+        <div>
+          <h3 data-i18n="about_values_h">ಮೌಲ್ಯಗಳು (Values)</h3>
+          <ul class="about-list">
+            <li data-i18n="about_values_li1">ನೈತಿಕತೆ ಮತ್ತು ಮೂಲತ್ವ.</li>
+            <li data-i18n="about_values_li2">ಶೈಕ್ಷಣಿಕ ದೃಢತೆ ಮತ್ತು ಸ್ಪಷ್ಟತೆ.</li>
+            <li data-i18n="about_values_li3">ಮುಕ್ತ ಚರ್ಚೆ ಮತ್ತು ವೈವಿಧ್ಯ.</li>
+          </ul>
+        </div>
+      </div>
     </section>
 
-    <section style="margin-top: 1.5em;">
-      <h2 style="color: var(--sp-brown-600);">Editorial Board Overview</h2>
-      <p>
-        Our editorial board consists of esteemed scholars and experts in Kannada studies, committed to maintaining the quality and integrity of published work. For more information about our editorial board members, please visit the <a href="editorial-board.html" style="color: var(--sp-red-700); font-weight: 700;">Editorial Board</a> page.
+    <!-- EDITORIAL BOARD LINK -->
+    <section class="about-card">
+      <h2 data-i18n="about_board_h">ಸಂಪಾದಕ ಮಂಡಳಿ</h2>
+      <p data-i18n="about_board_p">
+        ನಮ್ಮ ಸಂಪಾದಕ ಮಂಡಳಿಯಲ್ಲಿ ಕನ್ನಡ ಅಧ್ಯಯನ ಕ್ಷೇತ್ರದ ಖ್ಯಾತ ಪಂಡಿತರಿದ್ದಾರೆ. ಪ್ರಕಟಿತ ಲೇಖನಗಳ ಗುಣಮಟ್ಟ ಮತ್ತು ನೈತಿಕತೆ ಕಾಪಾಡುವುದರಲ್ಲಿ ಅವರು ಬದ್ಧರಾಗಿದ್ದಾರೆ.
       </p>
+      <div class="about-actions">
+        <a class="sp-btn" href="/editorial-board.html" data-i18n="about_btn_board">ಸಂಪಾದಕ ಮಂಡಳಿ ವೀಕ್ಷಿಸಿ</a>
+      </div>
     </section>
 
-    <section style="margin-top: 1.5em;">
-      <h2 style="color: var(--sp-brown-600);">Contact Information</h2>
-      <p>
-        For any inquiries, please reach out to us at:<br><br>
-        <strong>Email:</strong> <a href="mailto:info@journalofkannada.com" style="color: var(--sp-red-700); font-weight: 700;">info@journalofkannada.com</a><br>
-        <strong>Phone:</strong> +91 123 456 7890<br>
-        <strong>Address:</strong> 123 Kannada Journal Road, Bengaluru, India
-      </p>
+    <!-- CONTACT -->
+    <section class="about-card">
+      <h2 data-i18n="about_contact_h">ಸಂಪರ್ಕ</h2>
+      <div class="about-contact">
+        <div class="about-contact__item">
+          <strong data-i18n="label_email">ಇಮೇಲ್</strong>
+          <a href="mailto:info@journalofkannada.com">info@journalofkannada.com</a>
+        </div>
+        <div class="about-contact__item">
+          <strong data-i18n="label_phone">ಫೋನ್</strong>
+          <span>+91 123 456 7890</span>
+        </div>
+        <div class="about-contact__item">
+          <strong data-i18n="label_address">ವಿಳಾಸ</strong>
+          <address>123 Kannada Journal Road, Bengaluru, India</address>
+        </div>
+      </div>
+    </section>
+
+    <!-- QUICK LINKS -->
+    <section class="about-card">
+      <h2 data-i18n="about_quick_h">ತ್ವರಿತ ಲಿಂಕ್‌ಗಳು</h2>
+      <div class="about-links">
+        <a class="about-link" href="/archive.html">
+          <span data-i18n="nav_archive">ಲೇಖನ ಸಂಗ್ರಹ</span>
+          <em data-i18n="about_explore">ಅನ್ವೇಷಿಸಿ</em>
+        </a>
+        <a class="about-link" href="/guidelines.html">
+          <span data-i18n="nav_submit">ಸಲ್ಲಿಕೆ ಮಾರ್ಗಸೂಚಿ</span>
+          <em data-i18n="about_submit">ಸಲ್ಲಿಸಿ</em>
+        </a>
+        <a class="about-link" href="/contact.html">
+          <span data-i18n="nav_contact">ಸಂಪರ್ಕಿಸಿ</span>
+          <em data-i18n="about_get_in_touch">ಸಂಪರ್ಕ</em>
+        </a>
+      </div>
     </section>
   </main>
 
@@ -52,11 +121,12 @@
   <script src="/js/include.js"></script>
   <script src="/js/nav.js"></script>
   <script>
-    // Load header, then footer, then init nav (prevents race conditions)
     include('#header-include','/partials/header.html')
       .then(() => include('#footer-include','/partials/footer.html'))
       .then(() => { if (window.spNavInit) window.spNavInit(); });
   </script>
 
-  <!-- i18n (loads strings from /lang/lang.json and swaps by data-i18n) -->
-  <script src=
+  <!-- i18n -->
+  <script src="/js/lang.js"></script>
+</body>
+</html>
